refs 7.9 Adicionando script de migracao para as demais tabelas a partir de arquivo ddl.sql temporario criado. Ajustando o nome da tabela group com `group` devido a ser palavra reservada.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,9 @@ spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
+#criar um arquivo ddl com scripts para insercao das entidades do projeto que tem as anotacoes do jpa
+#spring.jpa.properties.javax.persistence.schema-generation.scpritps.action=create
+#spring.jpa.properties.javas.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
