--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.datasource.password=root
 #spring.jpa.properties.javax.persistence.schema-generation.scpritps.action=create
 #spring.jpa.properties.javas.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
