--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,10 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#propriedades para lancar excecao caso sejam passados campos inexistentes ou ignorados nas requisicoes
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#propriedades para lancar excecao caso nao tenha um resource para a URL passada
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
